Menambahkan overflow:hiden di section untuk fixed togler hilang saat scroll

--- a/style.css
+++ b/style.css
@@ -23,4 +23,5 @@ input {
 
 section {
     padding-top: 5rem;
+    overflow: hidden;
 }
